Minor restyle to avoid stretching icons and such

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,4 +2,5 @@
 
 .eyevinn-player {
   width: 100%;
+  height: 100%;
 }
