--- a/styles/skin.scss
+++ b/styles/skin.scss
@@ -1,7 +1,22 @@
 .player-controller {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
   background-color: black;
   opacity: 0.5;
   transition: visibility 0s linear 0.7s, opacity 0.7s ease-in-out;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 15%;
+}
+
+.player-controller > * {
+  margin: 0 5px;
 }
 
 .player-controller-visible {
@@ -13,11 +28,12 @@
 }
 
 .player-timeline-container {
-  position: absolute;
-  left: 30%;
   width: 50%;
   height: 10%;
-  top: 45%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .player-timeline {
@@ -41,7 +57,6 @@
   font-size: 0.8em;
   color: white;
   float: left;
-  transform: translateY(-2px);
 }
 
 .player-timeline-duration {
@@ -49,50 +64,43 @@
   font-size: 0.8em;
   color: white;
   float: right;
-  transform: translateY(-8px);
 }
 
 .player-btn-toggle-play {
-  position: absolute;
   height: 50%;
   width: 5%;
-  top: 20%;
-  left: 85%;
   border-radius: 7pt;
   padding: 2px;
 }
 
 .player-btn-play {
   background: url('../icons/media-play.svg') center no-repeat;
-  background-size: 75% 75%;
+  background-size: 50%;
   background-color: white;
 }
 
 .player-btn-pause {
   background: url('../icons/media-pause.svg') center no-repeat;
-  background-size: 75% 75%;
+  background-size: 50%;
   background-color: white;
 }
 
 .player-btn-toggle-audio {
-  position: absolute;
   height: 50%;
   width: 5%;
-  top: 20%;
-  left: 92%;
   border-radius: 7pt;
   padding: 2px;
 }
 
 .player-btn-audio-on {
   background: url('../icons/volume-high.svg') center no-repeat;
-  background-size: 70% 70%;
+  background-size: 50%;
   background-color: white;
 }
 
 .player-btn-audio-off {
   background: url('../icons/volume-off.svg') center no-repeat;
-  background-size: 70% 70%;
+  background-size: 50%;
   background-color: white;
 }
 
@@ -102,16 +110,17 @@
 
 .player-btn-big {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 96%;
-  height: 96%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 33%;
+  height: 33%;
   margin: 2%;
   z-index: 20;
   opacity: 0.5;
   border-radius: 40px;
   background: url('../icons/media-play.svg') center no-repeat;
-  background-size: 70% 70%;
+  background-size: 33%;
   background-color: white;
   cursor: pointer;
 }
@@ -125,13 +134,10 @@
 }
 
 .player-logo {
-  position: absolute;
   background: url('../icons/eyevinnlogo.png') no-repeat;
-  background-size: 100% 100%;
+  background-size: contain; 
   height: 70%;
   width: 25%;
-  top: 15%;
-  left: 2%;
 }
 
 @media (max-width: 850px) {
